@@ -829,6 +829,24 @@ class DeformDemo(object):
         form = deform.Form(schema, buttons=('submit',))
         return self.render_form(form)
 
+    @view_config(renderer='templates/form.pt', name='select_with_size')
+    @demonstrate('Select Widget (with size)')
+    def select_with_size(self):
+        choices = (
+            ('', '- Select -'),
+            ('habanero', 'Habanero'),
+            ('jalapeno', 'Jalapeno'),
+            ('chipotle', 'Chipotle')
+            )
+        class Schema(colander.Schema):
+            pepper = colander.SchemaNode(
+                colander.String(),
+                widget=deform.widget.SelectWidget(values=choices, size=2)
+                )
+        schema = Schema()
+        form = deform.Form(schema, buttons=('submit',))
+        return self.render_form(form)
+
     @view_config(renderer='templates/form.pt', name='checkboxchoice')
     @demonstrate('Checkbox Choice Widget')
     def checkboxchoice(self):
